--- a/index.html
+++ b/index.html
@@ -33,15 +33,16 @@
     </div>
 
     <nav class="he-nav">
-
-        <a href="#">Main</a>
-        <a href="#">Menu</a>
-        <a href="#">Gallery</a>
-        <a href="#">FAQ</a>
-        <a href="#">Delivery</a>
-        <a href="#">Contacts</a>
-        <a href="#">Team</a>
+        <a href="main.html">Main</a>
+        <a href="menu.html">Menu</a>
+        <a href="gallery.html">Gallery</a>
+        <a href="FAQ.html">FAQ</a>
+        <a href="contacts.html">Contacts</a>
+        <a href="team.html">Team</a>
+        <a href="delivery.html">Delivery</a>
+        <a href="about.html">About</a>
     </nav>
+
 </header>
 
 <main class="he-container">
