--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
     <link rel="stylesheet" href="gallery-style.css" />
     <link rel="stylesheet" href="menu-style.css" />
     <link rel="stylesheet" href="team-style.css" />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+<script src="assets/js/app.js"></script>
 </head>
+
 <body>
+    <div id="scrollProgress"></div>
 
 
 <div id="scrollProgress"></div>
