--- a/team.html
+++ b/team.html
@@ -8,11 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@700&family=Montserrat:wght@300;500;600;700&family=Varta:wght@300;600;700&display=swap" rel="stylesheet">
     <title>Healthyeats</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-<script src="assets/js/app.js"></script>
 </head>
 <body>
-    <div id="scrollProgress"></div>
     <header class="header">
         <div class="container">
             <div class="header__inner">
@@ -62,7 +59,7 @@
                 <div class="teamMember">
                     <img src="assets/img/team/Arman.jpg" alt="member2" class="teamMemberImg">
                     <h2 class="teamMemberName">Arman M.</h2>
-                    <p class="teamMemberRole">Head Chef</p>
+                    <p class="teamMemberRole">Povar</p>
                     <div class="teamSocials">
                         <a href="#"><img src="assets/img/main/instagram.png" alt="instagram"></a>
                         <a href="#"><img src="assets/img/main/facebook.png" alt="facebook"></a>
@@ -81,8 +78,8 @@
 
                 <div class="teamMember">
                     <img src="assets/img/team/Almukhamed.jpg" alt="member4" class="teamMemberImg">
-                    <h2 class="teamMemberName">Almukhamed A.</h2>
-                    <p class="teamMemberRole">Delivery Manager</p>
+                    <h2 class="teamMemberName">Almukhammed A.</h2>
+                    <p class="teamMemberRole">CTO & Co-Founder</p>
                     <div class="teamSocials">
                         <a href="#"><img src="assets/img/main/instagram.png" alt="instagram"></a>
                         <a href="#"><img src="assets/img/main/facebook.png" alt="facebook"></a>
@@ -91,17 +88,7 @@
             </div>
         </section>
 
-        <div class="consultation_inner">
-            <div class="consultation-search">
-                <input type="text" class="consultation-search-input" placeholder="Email">
-                <form action="#">
-                    <button class="consultation-search-button" type="submit">Send</button>
-                </form>
-            </div>
-            <h2 class="consultation_inner__text">
-                If you have questions, plese fill out the form and we will call you back!
-            </h2>
-        </div>
+
     </main>
 
     <footer class="footer">
@@ -157,12 +144,16 @@
             </div>
         </div>
 
-        <div class="footer-copyright">
-            <hr class="line">
-            <div class="footer-copyright_text">
-                Assignment 2, SE-2411, website made by Alizhan, Arman, Aset, Almukhamed
-            </div>
-        </div>
+       
     </footer>
+
+    <script src="assets/js/formValidation.js"></script>
+<script src="assets/js/accordion.js"></script>
+<script src="assets/js/popup.js"></script>
+<script src="assets/js/changeBackground.js"></script>
+<script src="assets/js/dateTime.js"></script>
+
+
+
 </body>
 </html>
