--- a/FAQ.html
+++ b/FAQ.html
@@ -8,11 +8,8 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Libre+Franklin:wght@700&family=Montserrat:wght@300;500;600;700&family=Varta:wght@300;600;700&display=swap" rel="stylesheet">
     <title>Healthyeats</title>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
-<script src="assets/js/app.js"></script>
 </head>
 <body>
-    <div id="scrollProgress"></div>
     <header class="header">
         <div class="container">
             <div class="header__inner">
@@ -96,17 +93,27 @@
             </div>
         </div>
 
-        <div class="consultation_inner">
-            <div class="consultation-search">
-                <input type="text" class="consultation-search-input" placeholder="Email">
-                <form action="#">
-                    <button class="consultation-search-button" type="submit">Send</button>
-                </form>
-            </div>
-            <h2 class="consultation_inner__text">
-                If you have questions, plese fill out the form and we will call you back!
-            </h2>
-        </div>
+
+
+ <div class="contact-form">
+    <h2 class="contact-title">Contact Us</h2>
+    <p class="contact-subtitle">We’ll get back to you as soon as possible </p>
+    <form id="contactForm">
+        <label for="name">Your Name:</label>
+        <input type="text" id="name" placeholder="Your Name" required>
+
+        <label for="email">Your Email:</label>
+        <input type="email" id="email" placeholder="Your Email" required>
+
+        <label for="message">Your Message:</label>
+        <textarea id="message" placeholder="Your Message" required></textarea>
+
+        <button type="submit" class="send-btn">Send</button>
+    </form>
+    <p id="responseMessage" style="display:none;"></p>
+</div>
+
+
     </main>
 
     <footer class="footer">
@@ -176,12 +183,16 @@
             </div>
         </div>
 
-        <div class="footer-copyright">
-            <hr class="line">
-            <div class="footer-copyright_text">
-                Assignment 2, SE-2411, website made by Alizhan, Arman, Aset, Almukhamed
-            </div>
-        </div>
+        
     </footer>
+
+    <script src="assets/js/formValidation.js"></script>
+<script src="assets/js/accordion.js"></script>
+<script src="assets/js/popup.js"></script>
+<script src="assets/js/changeBackground.js"></script>
+<script src="assets/js/dateTime.js"></script>
+
+
+
 </body>
 </html>
